--- a/web/themes/hcas/templates/paragraphs/node--first-and-larger-teaser.html.twig
+++ b/web/themes/hcas/templates/paragraphs/node--first-and-larger-teaser.html.twig
@@ -28,7 +28,7 @@
         {{ content.field_teaser_text }}
       </div>
     </div>
-    <div class="teaser__image">
+    <div class="teaser__image image-right">
       {{ content.field_teaser_image }}
     </div>
   </div>
