--- a/web/themes/hcas/templates/paragraphs/paragraph--button.html.twig
+++ b/web/themes/hcas/templates/paragraphs/paragraph--button.html.twig
@@ -4,14 +4,15 @@
     'text-content',
     'paragraph--type--' ~ paragraph.bundle|clean_class,
     view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
-    not paragraph.isPublished() ? 'paragraph--unpublished'
+    not paragraph.isPublished() ? 'paragraph--unpublished',
+    'align--' ~ content.field_alignment.0['#markup']|clean_class
   ]
 %}
 {% block paragraph %}
   <div {{ attributes.addClass(classes) }}>
     {% block content %}
       {% if content.field_url.0['#context'].value is defined %}
-        <a {{ attributes.addClass('button', content.field_primary['#items'].value == 1 ? 'button--primary' : 'button--secondary') }} href="{{ content.field_url.0['#context'].value }}">
+        <a {{ attributes.setAttribute('class', ['button', content.field_primary['#items'].value == 1 ? 'button--primary' : 'button--secondary', content.field_fullwidth['#items'].value == 1 ? 'fullwidth']) }} href="{{ content.field_url.0['#context'].value }}">
           {{ content.field_label }}
         </a>
       {% endif %}
